test/tests/stages/13_floating-point_numbers/valid/function_calls/use_arg_after_fun_call.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: fun
        List[1]: 
          TIdentifier: x
        CB: 
          List[1]: 
            CS: 
              CIf: 
                CBinary: 
                  CGreaterThan: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
                CReturn: 
                  CVar: 
                    TIdentifier: x
                    None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CD: 
                        CVarDecl: 
                          CVariableDeclaration: 
                            TIdentifier: ret
                            CSingleInit: 
                              CFunctionCall: 
                                TIdentifier: fun
                                List[1]: 
                                  CBinary: 
                                    CAdd: 
                                    CVar: 
                                      TIdentifier: x
                                      None: 
                                    CConstant: 
                                      CConstInt: 
                                        TInt: 2
                                      None: 
                                    None: 
                                None: 
                              None: 
                            Double: 
                            None: 
                      CS: 
                        CReturn: 
                          CBinary: 
                            CAdd: 
                            CVar: 
                              TIdentifier: ret
                              None: 
                            CVar: 
                              TIdentifier: x
                              None: 
                            None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Double: 
          Double: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: fun
                  List[1]: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 1.000000
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
