test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_mod_2.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 5
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CRemainder: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 1.000000
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: i
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
